-enhanced mapper