@@ -4,72 +4,64 @@ import com.example.blogapp.entity.Comment;
 import com.example.blogapp.entity.Post;
 import com.example.blogapp.exception.BlogAPIException;
 import com.example.blogapp.exception.ResourceNotFoundException;
+import com.example.blogapp.mapper.CommentMapper;
 import com.example.blogapp.payload.CommentDto;
 import com.example.blogapp.repository.CommentRepository;
 import com.example.blogapp.repository.PostRepository;
 import com.example.blogapp.service.CommentService;
-import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CommentServiceImpl implements CommentService {
 
     private final CommentRepository commentRepository;
     private final PostRepository postRepository;
-    private final ModelMapper modelMapper;
+    private final CommentMapper commentMapper;
 
-    public CommentServiceImpl(CommentRepository commentRepository, PostRepository postRepository, ModelMapper modelMapper) {
+    public CommentServiceImpl(CommentRepository commentRepository, PostRepository postRepository, CommentMapper commentMapper) {
         this.commentRepository = commentRepository;
         this.postRepository = postRepository;
-        this.modelMapper = modelMapper;
+        this.commentMapper = commentMapper;
     }
 
     @Override
     public CommentDto createComment(Long postId, CommentDto commentDto) {
-        Comment comment = mapToEntity(commentDto);
+        Comment comment = commentMapper.toEntity(commentDto);
         //retrieve post entity by id
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
+        Post post = postRepository.findById(postId).orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
         //Set post to Comment Entity
         comment.setPost(post);
-        return mapToDto(commentRepository.save(comment));
+        return commentMapper.toDTO(commentRepository.save(comment));
     }
 
     @Override
     public List<CommentDto> getCommentsByPostId(Long postId) {
         //retrieve comments by postId
         List<Comment> comments = commentRepository.findByPostId(postId);
-        return comments.stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return comments.stream().map(commentMapper::toDTO).toList();
     }
 
     @Override
     public CommentDto getCommentsById(Long postId, Long commentId) {
         //retrieve post entity by PostId
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
+        Post post = postRepository.findById(postId).orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
         //retrieve comment entity by id
-        Comment comment = commentRepository.findById(commentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Comment", "id", commentId));
+        Comment comment = commentRepository.findById(commentId).orElseThrow(() -> new ResourceNotFoundException("Comment", "id", commentId));
         if (!comment.getPost().getId().equals(post.getId())) {
             throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Comment does not belong to this post");
         }
-        return mapToDto(comment);
+        return commentMapper.toDTO(comment);
     }
 
     @Override
     public void deleteCommentsById(Long postId, Long commentId) {
         //retrieve post entity by PostId
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
+        Post post = postRepository.findById(postId).orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
         //retrieve comment entity by id
-        Comment comment = commentRepository.findById(commentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Comment", "id", commentId));
+        Comment comment = commentRepository.findById(commentId).orElseThrow(() -> new ResourceNotFoundException("Comment", "id", commentId));
         if (!comment.getPost().getId().equals(post.getId())) {
             throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Comment does not belong to this post");
         }
@@ -79,27 +71,15 @@ public class CommentServiceImpl implements CommentService {
     @Override
     public CommentDto updateCommentById(Long postId, Long commentId, CommentDto commentDto) {
         //retrieve post entity by PostId
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
+        Post post = postRepository.findById(postId).orElseThrow(() -> new ResourceNotFoundException("Post", "id", postId));
         //retrieve comment entity by id
-        Comment comment = commentRepository.findById(commentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Comment", "id", commentId));
+        Comment comment = commentRepository.findById(commentId).orElseThrow(() -> new ResourceNotFoundException("Comment", "id", commentId));
         if (!comment.getPost().getId().equals(post.getId())) {
             throw new BlogAPIException(HttpStatus.BAD_REQUEST, "Comment does not belong to this post");
         }
         comment.setName(commentDto.getName());
         comment.setEmail(commentDto.getEmail());
         comment.setBody(commentDto.getBody());
-        return mapToDto(commentRepository.save(comment));
+        return commentMapper.toDTO(commentRepository.save(comment));
     }
-
-    private CommentDto mapToDto(Comment comment) {
-
-        return modelMapper.map(comment, CommentDto.class);
-    }
-
-    private Comment mapToEntity(CommentDto commentDto) {
-        return modelMapper.map(commentDto, Comment.class);
-    }
-
 }
